--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+	padding: 0;
+	margin: 0;
+}
+* {
+	box-sizing: border-box;
+}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans+Narrow:400,700');
+@import url('https://fonts.googleapis.com/css?family=Asap');
+@font-face {
+	font-family: Segoe WP;
+	src: url("./segoewp.ttf");
+}
