PC markup changes

--- a/src/app/adaptive/adaptive.component.sass
+++ b/src/app/adaptive/adaptive.component.sass
@@ -43,6 +43,8 @@
 	@media all and (min-width: 1300px)
 		.adaptiveContainer
 			padding: 0 90px
+			h2
+				padding-top: 50px
 			.devices
 				img.tablet
 					padding: 0 20px
