--- a/src/app/banner/banner.component.sass
+++ b/src/app/banner/banner.component.sass
@@ -87,11 +87,12 @@
 			.text
 				display: block
 				width: 475px
-				text-align: center
+				padding-left: 50px
 				p
-					font-size: 40px
+					font-size: 63px
 					font-family: 'Asap', sans-serif
 					color: white
+					text-align: center
 					&:nth-child(1)
 						color: #f5c506
 			.arrow
