--- a/src/app/combination/combination.component.html
+++ b/src/app/combination/combination.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="wrapper">
-    <h2>Lorem ipsum</h2>
+    <h2>LOREM IPSUM DOLOR SIT AMET</h2>
   </div>
   <div class="wrapper">
     <ng-content></ng-content>
