--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,8 +2,8 @@
   <div class="logo">
     <img src="../../assets/logo1.png"/>
     <img class="absolute" src="../../assets/logo2.png"/>
-    <span>THEAYELLOW</span>
-    <span class="craft">Craft By Css author.com</span>
+    <h3>THEAYELLOW</h3>
+    <p>Craft By Css author.com</p>
   </div>
   <div class="links">
     <div>
