--- a/src/app/twitter/twitter.component.html
+++ b/src/app/twitter/twitter.component.html
@@ -1,6 +1,8 @@
 <div class="twitterContainer">
   <div class="twiLogo">
     <img src="../../assets/twitter.png"/>
+    <span>22</span>
+    <img class="plus" src="../../assets/plus.png"/>
   </div>
   <div class="bubblesAndInput">
     <div class="bubbles">
