--- a/src/app/video-block/video-block.component.sass
+++ b/src/app/video-block/video-block.component.sass
@@ -47,7 +47,8 @@
 						width: 20px
 						height: 35px
 	@media all and (min-width: 1300px)
-		flex-grow: 2
 		.blocks
+			padding: 0
+			max-width: 670px
 			.text
 				padding-right: 0
