--- a/src/app/combination/combination.component.sass
+++ b/src/app/combination/combination.component.sass
@@ -28,8 +28,11 @@
 							color: #b26529
 							font-weight: normal
 				h2
+					display: inline
 					color: white
-					text-transform: uppercase
+					font-size: 37px
+					font-family: 'PT Sans', sans-serif
+					font-weight: 100
 				.scrollbar
 					padding-top: 45px
 					padding-bottom: 20px
@@ -47,3 +50,4 @@
 						height: 100%
 						background: #ec9e03
 						border-radius: 10px
+							display: inline
