--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,14 +1,16 @@
-<div class="steps">
-  <div>
-    <img src="../../assets/design.png"/>
-    <span>BETTER DESIGN</span>
-  </div>
-  <div>
-    <img src="../../assets/customise.png"/>
-    <span>CUSTOMISE</span>
-  </div>
-  <div>
-    <img src="../../assets/free.png"/>
-    <span>IT'S FREE</span>
+<div class="container">
+  <div class="steps">
+    <div>
+      <img src="../../assets/design.png"/>
+      <span>BETTER DESIGN</span>
+    </div>
+    <div>
+      <img src="../../assets/customise.png"/>
+      <span>CUSTOMISE</span>
+    </div>
+    <div>
+      <img src="../../assets/free.png"/>
+      <span>IT'S FREE</span>
+    </div>
   </div>
 </div>
