--- a/src/app/features/features.component.sass
+++ b/src/app/features/features.component.sass
@@ -1,6 +1,5 @@
 \:host
 	.steps
-		background-color: blue
 		display: flex
 		background-color: #f2f2f2
 		justify-content: space-between
@@ -35,12 +34,36 @@
 				padding-top: 20px
 				position: relative
 				display: block
+				font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+				font-weight: 100
+				font-size: 23px
 	@media all and (min-width: 1300px)
-		.steps
-			justify-content: center
-			padding: 0
-			div
-				height: 210px
-				width: 340px
-				&:not(:first-child)
+		.container
+			position: relative
+			box-shadow: 0px -1px 3px 4px rgba(61,61,59,1)
+			&:before
+				content: ""
+				position: absolute
+				display: block
+				top: 0
+				right: 0
+				left: 0
+				bottom: 0
+				background: repeating-linear-gradient(45deg, rgba(0,0,0,0.025), rgba(0,0,0,0.025) 2px, transparent 2px, transparent 4px)
+			.steps
+				justify-content: center
+				padding: 0
+				max-width: 1024px
+				margin: 0 auto
+				background: transparent
+				&:before
+					display: none
+				&:after
+					display: none
+				div
+					height: 210px
+					width: 340px
+					padding-top: 55px
 					border-left: 1px solid #b1b0ae
+					&:last-child
+						border-right: 1px solid #b1b0ae
