--- a/src/app/twitter/twitter.component.sass
+++ b/src/app/twitter/twitter.component.sass
@@ -10,6 +10,10 @@
 			display: flex
 			justify-content: center
 			align-items: center
+		span
+			display: none
+		.plus
+			display: none
 		.bubblesAndInput
 			padding-right: 30px
 			.bubbles
@@ -55,5 +59,23 @@
 		flex-grow: 1
 		.twitterContainer
 			height: 100%
+			min-width: 330px
+			background-color: #ec9e03
+			position: relative
+			margin-left: 35px
+			span
+				display: inline
+				position: absolute
+				font-size: 25px
+				top: 15px
+				right: 20px
+				color: white
+				font-family: 'Segoe WP', sans-serif
+				font-weight: 100
+			.plus
+				display: block
+				position: absolute
+				bottom: 15px
+				right: 20px
 			.bubblesAndInput
 				display: none
