fixed for twitter message

--- a/src/app/twitter/twitter.component.sass
+++ b/src/app/twitter/twitter.component.sass
@@ -29,11 +29,15 @@
 					overflow: hidden
 					text-overflow: ellipsis
 					background-repeat: no-repeat
-					background-size: contain
+					background-size: 100% 100%
 					margin-bottom: 15px
 					font-family: Arial 
 					color: #aea792
 					font-size: 15px
+					&:nth-child(2)
+						opacity: 0.8
+					&:nth-child(3)
+						opacity: 0.7
 			.inputBtn
 				display: flex
 				height: 30px
